# itia_control

./: README.md  contributors.txt  dependencies.txt
control_models/: CMakeLists.txt  package.xml
control_models/include/control_models/: ss.h
control_models/src/: control_model_test.cpp
control_models/src/control_models/: ss.cpp
itia_clik/: CMakeLists.txt  package.xml
itia_clik/cfg/: clik.cfg  clik_test.yaml
itia_clik/include/itia_clik/: itia_clik.h
itia_clik/launch/: clik_test.launch
itia_clik/src/: itia_clik_test.cpp
itia_clik/src/itia_clik/: itia_clik.cpp
itia_control/: CMakeLists.txt  package.xml
itia_controllers_and_filters/: CMakeLists.txt  package.xml
itia_controllers_and_filters/include/itia_controllers_and_filters/: c_impedance_control.h  discrete_state_space.h  pid.h  tf.h
itia_controllers_and_filters/script/: Copy_of_create_filter.m  create_filter.m
itia_controllers_and_filters/src/: test_controller.cpp
itia_controllers_and_filters/src/itia_controllers_and_filters/: c_impedance_control.cpp
